--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
     ],
     "require": {
         "firebase/php-jwt": "^5.0",
-        "php": "^7.1.3",
+        "php": "^7.1.3|^8.0",
         "socialiteproviders/manager": "^3.3",
         "league/oauth2-client": "^2.4"
     },
